--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -34,7 +34,7 @@ The *_Architecture Diagram_* given above explains the high-level design of the A
 The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
 Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
 
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/ezwatchlist/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/ezwatchlist/MainApp.java[`MainApp`]. It is responsible for,
+`Main` has two classes called link:{repoURL}/src/main/java/seedu/EzWatchlist/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/EzWatchlist/MainApp.java[`MainApp`]. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -78,7 +78,7 @@ The sections below give more details of each component.
 .Structure of the UI Component
 image::UiClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/ezwatchlist/ui/Ui.java[`Ui.java`]
+*API* : link:{repoURL}/src/main/java/seedu/EzWatchlist/ui/Ui.java[`Ui.java`]
 
 The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `ShowListPanel`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
@@ -97,7 +97,7 @@ The `UI` component,
 image::LogicClassDiagram.png[]
 
 *API* :
-link:{repoURL}/src/main/java/seedu/ezwatchlist/logic/Logic.java[`Logic.java`]
+link:{repoURL}/src/main/java/seedu/EzWatchlist/logic/Logic.java[`Logic.java`]
 
 .  `Logic` uses the `WatchListParser` class to parse the user command.
 .  This results in a `Command` object which is executed by the `LogicManager`.
@@ -118,12 +118,12 @@ NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X
 .Structure of the Model Component
 image::ModelClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/ezwatchlist/model/Model.java[`Model.java`]
+*API* : link:{repoURL}/src/main/java/seedu/EzWatchlist/model/Model.java[`Model.java`]
 
 The `Model`,
 
 * stores a `UserPref` object that represents the user's preferences.
-* stores the Ezwatchlist data.
+* stores the EzWatchlist data.
 * exposes an unmodifiable `ObservableList<Show>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
 * does not depend on any of the other three components.
 
@@ -138,7 +138,7 @@ image:BetterModelClassDiagram.png[]
 .Structure of the Storage Component
 image::StorageClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/ezwatchlist/storage/Storage.java[`Storage.java`]
+*API* : link:{repoURL}/src/main/java/seedu/EzWatchlist/storage/Storage.java[`Storage.java`]
 
 The `Storage` component,
 
@@ -154,7 +154,7 @@ The `Storage` component,
 image::ApiClass.png[width='600']
 
 *API* :
-link:{repoURL}/src/main/java/seedu/ezwatchlist/api/ApiManager.java[`ApiManager.java`]
+link:{repoURL}/src/main/java/seedu/EzWatchlist/api/ApiManager.java[`ApiManager.java`]
 
 In Figure 9, we see the structure of the API component centered around `ApiManager`. Moreover:
 
@@ -169,7 +169,7 @@ In Figure 9, we see the structure of the API component centered around `ApiManag
 [[Design-Commons]]
 === Common classes
 
-Classes used by multiple components are in the `seedu.ezwatchlist.commons` package.
+Classes used by multiple components are in the `seedu.EzWatchlist.commons` package.
 
 == Implementation
 
@@ -229,7 +229,7 @@ image::WatchSequenceDiagram.png[]
 === [Proposed] Statistics feature
 ==== Proposed Implementation
 
-The statistics feature is facilitated by `Statistics` object. It extends `Ezwatchlist` with a summary of the users' personal
+The statistics feature is facilitated by `Statistics` object. It extends `EzWatchlist` with a summary of the users' personal
 preferences and footprint including the most watched genre, shows that you might have forgotten to watch, and the
 recommendations generated for you. It is stored internally as an `Statistics` object containing a `ModelManager`.
 Additionally, it implements the following operations:
@@ -623,7 +623,7 @@ Refer to the guide <<DevOps#, here>>.
 
 *Value proposition*:
 
-EZWatchList provides a unique, clean and simple way of organizing and keeping track of your watchlist. All in one solution to your problem.
+EzWatchlist provides a unique, clean and simple way of organizing and keeping track of your watchlist. All in one solution to your problem.
 
 [appendix]
 == User Stories
@@ -701,7 +701,7 @@ _{More to be added}_
 [appendix]
 == Use Cases
 
-(For all use cases below, the *System* is the `Ezwatchlist` and the *Actor* is the `user`, unless specified otherwise)
+(For all use cases below, the *System* is the `EzWatchlist` and the *Actor* is the `user`, unless specified otherwise)
 
 [discrete]
 === Use case: Add Movie
@@ -711,9 +711,9 @@ _{More to be added}_
 1.  User navigates to the main page
 2.  User enters 'Add' command
 3.  User enters the movie name
-4.  Ezwatchlist will display a list of movies found
+4.  EzWatchlist will display a list of movies found
 5.  User enters the index given by the list
-6.  Ezwatchlist will add the movie to their watchlist
+6.  EzWatchlist will add the movie to their watchlist
 +
 Use case ends.
 
@@ -740,7 +740,7 @@ Use case resumes at step 4.
 
 1.  User navigates to the main page
 2.  User enters 'Watched' command giving the index of the item
-3.  Ezwatchlist will mark that item as watched
+3.  EzWatchlist will mark that item as watched
 +
 Use case ends.
 
@@ -759,9 +759,9 @@ Use case ends.
 
 1.  User navigates to the main page
 2.  User enters 'search' command giving the name of the item
-3.  Ezwatchlist will bring the user to a search page with items found in a list
+3.  EzWatchlist will bring the user to a search page with items found in a list
 4.  User enters View command of the index of the item.
-5.  Ezwatchlist will bring that item into details page
+5.  EzWatchlist will bring that item into details page
 +
 Use case ends.
 
@@ -787,7 +787,7 @@ Use case resumes at step 3.
 
 1.  User navigates to the main page.
 2.  User enters 'edit' command giving the name of the item.
-3.  Ezwatchlist will bring the user to a details page of the item entered.
+3.  EzWatchlist will bring the user to a details page of the item entered.
 4.  User edits the details of the item.
 5.  User saves the edits.
 +
@@ -808,9 +808,9 @@ Use case ends.
 
 1.  User navigates to the page containing the item to be deleted.
 2.  User enters 'delete' command giving the name of the item.
-3.  Ezwatchlist asks for confirmation from the user.
+3.  EzWatchlist asks for confirmation from the user.
 4.  User confirms.
-5.  Ezwatchlist deletes the item.
+5.  EzWatchlist deletes the item.
 +
 Use case ends.
 
@@ -833,7 +833,7 @@ Use case ends.
 *MSS*
 
 1.  User navigates to the statistics page
-2.  Ezwatchlist displays the information.
+2.  EzWatchlist displays the information.
 +
 Use case ends.
 
@@ -899,23 +899,6 @@ The page where the user can access to view the list of shows indicated as watche
 The list of shows that the user wishes to watch in the future.
 
 [appendix]
-== Product Survey
-
-*Product Name*
-
-Author: ...
-
-Pros:
-
-* ...
-* ...
-
-Cons:
-
-* ...
-* ...
-
-[appendix]
 == Instructions for Manual Testing
 
 Given below are instructions to test the app manually.
@@ -937,26 +920,3 @@ These instructions only provide a starting point for testers to work on; testers
 .. Re-launch the app by double-clicking the jar file. +
    Expected: The most recent window size and location is retained.
 
-_{ more test cases ... }_
-
-=== Deleting a person
-
-. Deleting a person while all persons are listed
-
-.. Prerequisites: List all persons using the `list` command. Multiple persons in the list.
-.. Test case: `delete 1` +
-   Expected: First contact is deleted from the list. Details of the deleted contact shown in the status message. Timestamp in the status bar is updated.
-.. Test case: `delete 0` +
-   Expected: No person is deleted. Error details shown in the status message. Status bar remains the same.
-.. Other incorrect delete commands to try: `delete`, `delete x` (where x is larger than the list size) _{give more}_ +
-   Expected: Similar to previous.
-
-_{ more test cases ... }_
-
-=== Saving data
-
-. Dealing with missing/corrupted data files
-
-.. _{explain how to simulate a missing/corrupted file and the expected behavior}_
-
-_{ more test cases ... }_
