--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -646,11 +646,11 @@ After the operations, the original full reimbursement list is displayed.
 ==== Done Command feature
 
 This command is used to mark a reimbursement that has been done.
-Done command requires access to `Model` of the person package which the `AddressBook` implementation is contained in.
+Done command requires access to `Model` of the person package.
 Person field should be provided and the person's name should exist in reimbursement list.
 
 [[ReimbursementDoneCommandSD]]
-.Sequence Diagram of Done Command in Reimbursements tab (reimbursement package)
+.Sequence diagram of done command execution in reimbursements tab (reimbursement package)
 image::Reimbursement/ReimbursementDoneCommandSD.png[]
 
 A user needs to mark a reimbursement as done by specifying the person's name for the specific reimbursement.
@@ -658,7 +658,8 @@ The `DeadlineCommandParser` creates a `DoneCommand` with person's information.
 As shown in the above figure, `DoneCommand` is returned back to `LogicManager`
 and it is executed by calling `doneReimbursement` method in
 `ModelManager`.
-After the operations, that reimbursement is deleted from reimbursement list and the status of transactions that consist of this reimbursement is updated to `True`.
+After the operations, the status of transactions that consist of this reimbursement is updated to `True`
+and that reimbursement is deleted from the reimbursement list.
 Then the updated reimbursement list is displayed and this new list without that deleted reimbursement is saved.
 
 The following figure shows how transactions' status is updated.
@@ -667,7 +668,7 @@ Then `LogicManager` gets the updated transaction list and passes this list to `S
 of transaction tab to save it.
 
 [[ReimbursementUpdateTransactionsSD]]
-.Sequence Diagram of updating transactions in Reimbursements tab (reimbursement package)
+.Sequence diagram of updating transactions in reimbursements tab (reimbursement package)
 image::Reimbursement/ReimbursementUpdateTransactionsSD.png[]
 
 <<ReimbursementTabActivityDiagramDoneCommand, The following activity diagram>> shows the steps needed for done command.
@@ -720,7 +721,7 @@ So, alternative 2 is more efficient.
 
 [[facade]]
 .Code snippet of `transactionLogic` facade class in `MainWindow`
-image::Reimbursement/codeSnippetTransactionLogic.png[width="700"]
+image::Reimbursement/codeSnippetTransactionLogic.png[width="600"]
 
 
 === Inventory Tab
