--- a/docs/team/coderstellaj.adoc
+++ b/docs/team/coderstellaj.adoc
@@ -14,22 +14,15 @@ endif::[]
 == Introduction
 
 This project portfolio page (PPP) introduces the project, treasurerPro.
-The PPP outlines my contributions to the project and showcases the key features I implemented.
-
-=== About the project
+Then the PPP outlines my contributions to the project and showcases the key features I implemented.
 
 My team consists of 5 students from Computer Science/Computer Engineering.
-And the project is part of the module 'CS2103T Software Engineering Project' where we were tasked to develop a basic command line interface desktop application by morphing or enhancing an existing AddressBook desktop application.
+And the project is part of the module 'CS2103T Software Engineering Project'
+where we were tasked to develop a basic command line interface desktop application by morphing or enhancing an existing AddressBook desktop application.
 Our team decided to incorporate and morph the AddressBook application into our application **treasurerPro**.
-Our application enables treasurers of Co-Curricular Activities (CCA) Clubs to manage their club finances, reimbursements, inventory and member’s contact details easily.
-The duration of our project was 13 weeks.
 
-=== About our application
-
-treasurerPro consists of home tab, members tab, reimbursements tab, inventory tab, cashier tab and overview tab, a command box for users to input their commands and a response box for Leo which is our lion mascot.
-Each tab serves a different purpose that helps treasurers and members better manage their club or society's finances.
-
-This is what our application looks like when it is first opened:
+Our application enables treasurers of Co-Curricular Activities (CCA) Clubs to manage their club finances,
+reimbursements, inventory and member’s contact details easily. This is what our application looks like when it is first opened:
 
 .Graphical user interface of treasurerPro
 image::Reimbursement/AnnotatedUi.png[width="500"]
@@ -239,28 +232,43 @@ image::Reimbursement/ReimbursementTabActivityDiagramDeadlineCommand.png[width="3
 As shown by the above activity diagram, when a user inputs a person who does not exist in any reimbursement or keys in an invalid data format, our app displays the expected format of the deadline command.
 Otherwise, when the execution is successful, a response informs the user that deadline is successfully added to the reimbursement.
 
-=== Find command feature
 
-This command is used to find a reimbursement that contains the person's name.
-The find command requires access to `Model` of the person package.
+==== Done Command feature
+
+This command is used to mark a reimbursement that has been done.
+Done command requires access to `Model` of the person package.
 Person field should be provided and the person's name should exist in reimbursement list.
 
-.Sequence diagram of find command in reimbursements tab (reimbursement package)
-image::Reimbursement/ReimbursementFindCommandSD.png[width="350"]
+[[ReimbursementDoneCommandSD]]
+.Sequence diagram of done command execution in reimbursements tab (reimbursement package)
+image::Reimbursement/ReimbursementDoneCommandSD.png[width="350"]
 
-A user needs to find a reimbursement by providing the person's name.
-As shown in the above figure, `FindCommand` is executed by calling `findReimbursement` method in
+A user needs to mark a reimbursement as done by specifying the person's name for the specific reimbursement.
+The `DeadlineCommandParser` creates a `DoneCommand` with person's information.
+As shown in the above figure, `DoneCommand` is returned back to `LogicManager`
+and it is executed by calling `doneReimbursement` method in
 `ModelManager`.
-After the operations, that reimbursement is returned and reimbursement tab only shows a `filteredList` which contains this single reimbursement.
+After the operations, the status of transactions that consist of this reimbursement is updated to `True`
+and that reimbursement is deleted from the reimbursement list.
+Then the updated reimbursement list is displayed and this new list without that deleted reimbursement is saved.
 
-[[ReimbursementTabActivityDiagramFindCommand]]
-.Activity diagram of find command in reimbursements tab (reimbursement package)
-image::Reimbursement/ReimbursementTabActivityDiagramFindCommand.png[width="270"]
+The following figure shows how transactions' status is updated.
+Firstly, the reimbursement which contains the person's name updates status of all transactions that made up of the reimbursement.
+Then `LogicManager` gets the updated transaction list and passes this list to `StorageManager`
+of transaction tab to save it.
 
-The above activity diagram shows the steps needed for find command.
+[[ReimbursementUpdateTransactionsSD]]
+.Sequence diagram of updating transactions in reimbursements tab (reimbursement package)
+image::Reimbursement/ReimbursementUpdateTransactionsSD.png[width="500"]
+
+<<ReimbursementTabActivityDiagramDoneCommand, The following activity diagram>> shows the steps needed for done command.
 The person's name is checked whether it exists in reimbursement list.
-If not, our app informs the user that person is not in the list.
-If command is valid, the found reimbursement is displayed in the tab.
+If not, our app informs the user that command is incorrect.
+If command is valid, the reimbursement containing the provided person's name is deleted from reimbursement list and will not be displayed.
+
+[[ReimbursementTabActivityDiagramDoneCommand]]
+.Activity Diagram of Done Command in Reimbursements tab (reimbursement package)
+image::Reimbursement/ReimbursementTabActivityDiagramDoneCommand.png[width="250"]
 
 == Overall design considerations
 
@@ -289,6 +297,6 @@ So, alternative 2 is more efficient.
 
 [[facade]]
 .Code snippet of `transactionLogic` facade class in `MainWindow`
-image::Reimbursement/codeSnippetTransactionLogic.png[width = "700"]
+image::Reimbursement/codeSnippetTransactionLogic.png[width = "600"]
 
 
